--- a/Depoza Extension/MainInterface.storyboard
+++ b/Depoza Extension/MainInterface.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Bg9-qK-6yJ">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                                <rect key="frame" x="-7" y="0.0" width="311" height="80"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="Ulz-yK-SKZ" detailTextLabel="hzw-CU-Ffe" style="IBUITableViewCellStyleValue1" id="oAu-TO-LUE">
@@ -29,13 +29,12 @@
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ulz-yK-SKZ">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hzw-CU-Ffe">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -47,12 +46,21 @@
                                     <outlet property="delegate" destination="M4Y-Lb-cyx" id="J9a-xm-idD"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No new expense today" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJH-L4-n5K">
+                                <rect key="frame" x="0.0" y="8" width="320" height="64"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="OJH-L4-n5K" secondAttribute="bottom" priority="999" constant="8" symbolic="YES" id="98K-6K-kVb"/>
                             <constraint firstItem="Bg9-qK-6yJ" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" id="JF2-qg-8V3"/>
-                            <constraint firstItem="Bg9-qK-6yJ" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" constant="-16" id="VWy-J1-Oib"/>
+                            <constraint firstAttribute="trailing" secondItem="OJH-L4-n5K" secondAttribute="trailing" priority="999" id="K7Q-jR-njo"/>
+                            <constraint firstItem="OJH-L4-n5K" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" priority="999" constant="8" symbolic="YES" id="S2y-pf-Agv"/>
+                            <constraint firstItem="Bg9-qK-6yJ" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" constant="-23" id="VWy-J1-Oib"/>
                             <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="Bg9-qK-6yJ" secondAttribute="bottom" id="bkp-5j-c80"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Bg9-qK-6yJ" secondAttribute="trailing" constant="-16" id="rZB-k0-KtT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Bg9-qK-6yJ" secondAttribute="trailing" id="rZB-k0-KtT"/>
+                            <constraint firstItem="OJH-L4-n5K" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" priority="999" id="tbE-C8-85x"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
@@ -62,6 +70,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="80"/>
                     <connections>
+                        <outlet property="noExpensesLabel" destination="OJH-L4-n5K" id="czl-le-S1O"/>
                         <outlet property="tableView" destination="Bg9-qK-6yJ" id="T5f-gK-y24"/>
                     </connections>
                 </viewController>
